--- a/public/css/style.css
+++ b/public/css/style.css
@@ -208,7 +208,7 @@ a:focus,
   display: table;
   width: 100%;
   padding: 0;
-  background: url(../img/team/8.jpg) center center no-repeat;
+  background: url(../img/big_logo.jpg) center center no-repeat fixed;
   background-color: #e5e5e5;
   -webkit-background-size: cover;
   -moz-background-size: cover;
