--- a/public/css/style.css
+++ b/public/css/style.css
@@ -206,7 +206,10 @@ a:focus,
 /* Header Section */
 .intro {
   display: table;
-  width: 100%;
+  height: 100vh;
+  background-size: cover;
+  /* background-attachment: fixed; */
+  width: 100vw;
   padding: 0;
   background: url(../img/big_logo.jpg) center center no-repeat fixed;
   background-color: #e5e5e5;
