--- a/public/css/style.css
+++ b/public/css/style.css
@@ -211,7 +211,7 @@ a:focus,
   /* background-attachment: fixed; */
   width: 100vw;
   padding: 0;
-  background: url(../img/big_logo.jpg) center center no-repeat fixed;
+  background: url(../img/big_logo.jpg) center center no-repeat fixed !important;
   background-color: #426CB4;
   -webkit-background-size: cover;
   -moz-background-size: cover;
