--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,7 +210,7 @@ a:focus,
   /* background-attachment:fixed; */
   width: 100vw;
   padding: 0;
-  -webkit-background: url(../img/big_logo.jpg) center center no-repeat fixed;
+  -webkit-background: url(../img/big_logo.jpg) center center no-repeat fixed !important;
   -moz-background: url(../img/big_logo.jpg) center center no-repeat fixed;
   background: url(../img/big_logo.jpg) center center no-repeat fixed;
   background-color: #426CB4;
