--- a/public/css/style.css
+++ b/public/css/style.css
@@ -210,10 +210,15 @@ a:focus,
   /* background-attachment:fixed; */
   width: 100vw;
   padding: 0;
-  -webkit-background: url(../img/big_logo.jpg) center center no-repeat fixed !important;
-  -moz-background: url(../img/big_logo.jpg) center center no-repeat fixed;
-  background: url(../img/big_logo.jpg) center center no-repeat fixed;
-  background-color: #426CB4;
+  /* -webkit-background: url(../img/big_logo.jpg) center center no-repeat fixed !important;
+  -moz-background: url(../img/big_logo.jpg) center center no-repeat fixed; */
+  background:
+    linear-gradient(
+      rgb(66, 108, 180),
+      rgb(66, 108, 180)
+    ) 
+    url(../img/big_logo.jpg) center center no-repeat fixed;
+  /* background-color: #426CB4; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
