--- a/public/css/style.css
+++ b/public/css/style.css
@@ -224,9 +224,9 @@ a:focus,
   background-size: cover;
   -o-background-size: cover;
 }
-.intro .overlay {
+/* .intro .overlay {
   background: rgba(0, 0, 0, 0.2);
-}
+} */
 .intro h1 {
   font-family: "Raleway", sans-serif;
   color: #fff;
