--- a/public/css/style.css
+++ b/public/css/style.css
@@ -217,7 +217,7 @@ a:focus,
       rgb(66, 108, 180),
       rgb(66, 108, 180)
     ) 
-    url(../img/big_logo.jpg) center center no-repeat fixed;
+    url(../img/big_logo.jpg) center center no-repeat fixed !important;
   /* background-color: #426CB4; */
   -webkit-background-size: cover;
   -moz-background-size: cover;
