--- a/public/css/style.css
+++ b/public/css/style.css
@@ -208,16 +208,19 @@ a:focus,
   display: table;
   height: 100vh;
   /* background-attachment:fixed; */
-  width: 100vw;
+  width: 100%;
   padding: 0;
   /* -webkit-background: url(../img/big_logo.jpg) center center no-repeat fixed !important;
-  -moz-background: url(../img/big_logo.jpg) center center no-repeat fixed; */
-  background: linear-gradient(rgb(66, 108, 180),rgb(66, 108, 180)) url(../img/big_logo.jpg) center center no-repeat fixed !important;
-  /* background-color: #426CB4; */
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+  -moz-background: url(../img/big_logo.jpg) center center no-repeat fixed;
+  background: url(../img/big_logo.jpg) center center no-repeat fixed !important; */
+  background: url(../img/big_logo.jpg) center no-repeat fixed;
+  -webkit-background: url(../img/big_logo.jpg) center no-repeat fixed;
+  -moz-background: url(../img/big_logo.jpg) center no-repeat fixed;
+  background-color: #426CB4;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
+  background-size: contain;
+  -o-background-size: contain;
 }
 .intro .overlay {
   background: rgba(0, 0, 0, 0.2);
