--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@ html {
   color: #777;
   font-weight: 400;
   margin: auto !important;
-  width: 100% !important;
+  width: 100%;
   height: 100% !important;
 }
 h2,
@@ -205,28 +205,34 @@ a:focus,
   outline-offset: none;
 }
 /* Header Section */
-#header {
+/* #header {  
+  /* background: url(../img/big_logo.jpg) center no-repeat fixed;
+  -webkit-background: url(../img/big_logo.jpg) center no-repeat fixed;
+  -moz-background: url(../img/big_logo.jpg) center no-repeat fixed;
+  -webkit-background-size: contain;
+  -moz-background-size: contain;
   background-color: #426CB4;
-}
+} 
+*/
+
+/* .logo {
+  
+} */
 
 .intro {
   display: table;
-  z-index: 9999;
   height: 100vh;
-  /* background-attachment:fixed; */
   width: 100%;
   padding: 0;
-  /* -webkit-background: url(../img/big_logo.jpg) center center no-repeat fixed !important;
-  -moz-background: url(../img/big_logo.jpg) center center no-repeat fixed;
-  background: url(../img/big_logo.jpg) center center no-repeat fixed !important; */
-  background: url(../img/big_logo.jpg) center no-repeat fixed;
-  -webkit-background: url(../img/big_logo.jpg) center no-repeat fixed;
-  -moz-background: url(../img/big_logo.jpg) center no-repeat fixed;
-  /* background-color: #426CB4; */
-  -webkit-background-size: contain;
-  -moz-background-size: contain;
   background-size: contain;
+  background: url(../img/big_logo_no_background_small.png);
+  background-color: #426cb4;
+  background-repeat: no-repeat;
+  background-attachment:fixed;
   -o-background-size: contain;
+  -moz-background-size: contain;
+  z-index: 9999;
+  -webkit-background-size: contain;
 }
 .intro .overlay {
   background: rgba(0, 0, 0, 0.2);
@@ -614,7 +620,54 @@ label {
 }
 
 @media (max-width: 768px) {
+  .intro {
+    position: relative;
+  }
   #about img {
     margin: 50px 0;
   }
+}
+
+@media (max-width: 413px) {
+  body {
+    width: 132vw !important;
+  }
+  
+  .intro {
+    background-size: contain;
+    background: url(../img/big_logo_no_background_small.png);
+    background-color: #426cb4;
+    background-repeat: no-repeat;
+    background-attachment:fixed;
+    -o-background-size: contain;
+    -moz-background-size: contain;
+    -webkit-background-size: contain;
+  }
+}
+
+@media only screen 
+  and (min-device-width: 420px) 
+  and (max-device-width: 812px) 
+  and (-webkit-min-device-pixel-ratio: 3)
+  and (orientation: portrait) { 
+
+    .intro {
+      background-size: contain;
+      background: url(../img/big_logo_no_background_small.png);
+      background-color: #426CB4;
+      background-repeat: no-repeat;
+      background-attachment:scroll;
+      -o-background-size: contain;
+      -moz-background-size: contain;
+      -webkit-background-size: contain;
+    }
+
+    #root {
+      width: fit-content;
+    }
+
+    .row {
+      margin: 0 20%
+    }
+
 }
